<resources>
    <string name="app_name">WorkingBee</string>
    <string name="login">Login</string>
    <string name="exit">EXIT</string>
    <string name="passwordHint">enter password</string>
    <string name ="welcomeMessage">Welcome</string>
    <string name ="chooseTask">Choose Task</string>
    <string name="startTime">Start Time</string>
    <string name="finishTime">Finish Time</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
    <string name ="logoContentDescr">Working Bee Logo</string>
</resources>